welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:3: error: not found: value a
    return a+b
           ^withoutDoubles:3: error: not found: value b
    return a+b
             ^withoutDoubles:5: error: not found: value a
  if (a==b){
      ^withoutDoubles:5: error: not found: value b
  if (a==b){
         ^withoutDoubles:6: error: not found: value a
    if (a!=6){
        ^withoutDoubles:7: error: not found: value a
      return a+b+1
             ^withoutDoubles:7: error: not found: value b
      return a+b+1
               ^withoutDoubles:9: error: not found: value a
    return a+1
           ^withoutDoubles:11: error: not found: value a
  return a+b
         ^withoutDoubles:11: error: not found: value b
  return a+b
           ^