welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.code
def withoutDoubles(die1:Int, die2:Int, noDoubles:Boolean):Int = {
  if(!noDoubles){
    return a+b
  }
  if (a==b){
    if (a!=6){
      return a+b+1
    }
    return a+1
  }
  return a+b
}